--- a/src/main/resources/static/filters_form.html
+++ b/src/main/resources/static/filters_form.html
@@ -20,8 +20,13 @@
                 <img src="images/mrvc_logo.png" alt="MRVC Logo" class="logo">
                 MRVC
             </div>
-            <h1>Document Management System</h1>
-            <div class="demo-badge" id="userName">DEMO</div>
+           	<h1>Document Management System</h1>
+		<div class="user-menu">
+        <div class="demo-badge" id="userName">DEMO</div>
+        <div class="user-dropdown" id="userDropdown">
+          <div class="dropdown-item" id="logoutBtn">🚪 Logout</div>
+        </div>
+      </div>
         </header>
 
         <nav class="navigation">
