--- a/src/main/resources/static/open_correspondance.html
+++ b/src/main/resources/static/open_correspondance.html
@@ -71,7 +71,7 @@
                                 <th>To</th>
                                 <th>Subject</th>
                                 <th>Required Response</th>
-                                <th>Due Date</th>
+                                <th>Letter Date</th>
                                 <th>Status</th>
                                 <th>Department</th>
                                 <th>Attachment</th>
