--- a/src/main/resources/static/correspondance.html
+++ b/src/main/resources/static/correspondance.html
@@ -32,7 +32,12 @@
 				MRVC
 			</div>
 			<h1>Document Management System</h1>
-			<div class="demo-badge" id="userName">DEMO</div>
+		<div class="user-menu">
+        <div class="demo-badge" id="userName">DEMO</div>
+        <div class="user-dropdown" id="userDropdown">
+          <div class="dropdown-item" id="logoutBtn">🚪 Logout</div>
+        </div>
+      </div>
 		</header>
 
 		<nav class="navigation">
@@ -65,12 +70,13 @@
 							<tr>
 								<th style="display : none;">Correspondence Id</th>
 								<th>Category</th>
+								<th>Letter Code</th>
 								<th>Letter Number</th>
 								<th>From</th>
 								<th>To</th>
 								<th>Subject</th>
 								<th>Required Response</th>
-								<th>Due Date</th>
+								<th>Letter Date</th>
 								<th>Project Name</th>
 								<th>Contract Name</th>
 								<th>Status</th>
@@ -193,6 +199,14 @@
 										<div class="filter-dropdown" data-column="13"></div>
 									</div>
 								</th>
+								<th>
+									<div class="filter-container">
+										<input type="text" class="column-filter" data-column="14"
+											placeholder="Search" readonly> <span
+											class="filter-dropdown-toggle">▼</span>
+										<div class="filter-dropdown" data-column="14"></div>
+									</div>
+								</th>								
 							</tr>
 
 							<!-- ADD THIS FILTER ROW IMMEDIATELY AFTER THE HEADER ROW -->
@@ -260,12 +274,13 @@
 							<tr>
 								<th style="display : none;">Correspondence Id</th>
 								<th>Category</th>
+								<th>Letter Code</th>
 								<th>Letter Number</th>
 								<th>From</th>
 								<th>To</th>
 								<th>Subject</th>
 								<th>Required Response</th>
-								<th>Due Date</th>
+								<th>Letter Date</th>
 								<th>Project Name</th>
 								<th>Contract Name</th>
 								<th>Status</th>
@@ -396,7 +411,7 @@
 								</select>
 							</div>
 							<div class="form-group">
-								<label for="dueDate">Due Date: *</label> <input type="date"
+								<label for="dueDate">Letter Date: *</label> <input type="date"
 									id="dueDate" name="dueDate">
 							</div>
 						</div>
