--- a/src/main/resources/static/folders.html
+++ b/src/main/resources/static/folders.html
@@ -22,8 +22,13 @@
 			MRVC
 		</div>
 		<h1>Document Management System</h1>
-		<div class="demo-badge" id="userName">DEMO</div>
-	</header>
+		<div class="user-menu">
+        <div class="demo-badge" id="userName">DEMO</div>
+        <div class="user-dropdown" id="userDropdown">
+          <div class="dropdown-item" id="logoutBtn">🚪 Logout</div>
+        </div>
+      </div>
+		</header>
 
 	<nav class="navigation">
 		<div class="nav-item" onclick="location.href='correspondance.html'">Correspondence</div>
@@ -675,20 +680,6 @@
 			</div>
 		</div>
 	</main>
-
-	<!-- <footer class="footer">
-        <div class="footer-left">
-            <div class="footer-logo">IRCON</div>
-            <div class="footer-text">Copyright © IRCON International Limited</div>
-        </div>
-        <div class="footer-right">
-            <div class="footer-text" style="margin-right: 15px;">Powered by Synersoft Global</div>
-            <svg class="footer-logo-right" viewBox="0 0 100 30" fill="none">
-                <rect width="100" height="30" rx="5" fill="#00a8cc" />
-                <text x="50" y="20" text-anchor="middle" fill="white" font-size="12" font-weight="bold">SG</text>
-            </svg>
-        </div>
-    </footer> -->
 
 	<script src="folders.js"></script>
 </body>
