--- a/src/main/resources/static/folders.html
+++ b/src/main/resources/static/folders.html
@@ -679,6 +679,43 @@
 				</div>
 			</div>
 		</div>
+		<!-- Right Click Context Menu -->
+<div id="fileContextMenu" style="display:none; position:fixed; z-index:9999; background:#1e3d6f; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.3); min-width:160px;">
+    <div class="ctx-item" id="ctxView">
+        <i class="fa-solid fa-eye"            style="color:#fff; margin-right:10px;"></i> View
+    </div>
+    <div class="ctx-item" id="ctxDownload">
+        <i class="fa-solid fa-download"       style="color:#a5d6a7; margin-right:10px;"></i> Download
+    </div>
+    <div class="ctx-item" id="ctxDetails">
+        <i class="fa-solid fa-circle-info"    style="color:#ffe082; margin-right:10px;"></i> Details
+    </div>
+</div>
+
+<!-- Details Modal -->
+<div id="detailsModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:99999; backdrop-filter:blur(2px);">
+    <div style="background:#fff; border-radius:12px; padding:0; max-width:420px; width:90%; margin:80px auto; position:relative; box-shadow:0 20px 60px rgba(0,0,0,0.3); overflow:hidden;">
+        
+        <!-- Header -->
+        <div style="background:linear-gradient(135deg, #1e3d6f, #2c5aa0); padding:12px 16px; display:flex; align-items:center; justify-content:space-between;">
+            <h3 style="color:#fff; margin:0; font-size:15px; font-weight:600; letter-spacing:0.5px;">
+                <i class="fa-solid fa-circle-info" style="margin-right:8px; color:#90caf9;"></i>File Details
+            </h3>
+            <button onclick="document.getElementById('detailsModal').style.display='none'"
+                    style="background:rgba(255,255,255,0.15); border:none; color:#fff; width:28px; height:28px; border-radius:50%; cursor:pointer; font-size:16px; display:flex; align-items:center; justify-content:center; line-height:1; transition:background 0.2s;"
+                    onmouseover="this.style.background='rgba(255,255,255,0.3)'"
+                    onmouseout="this.style.background='rgba(255,255,255,0.15)'">
+                ✕
+            </button>
+        </div>
+
+        <!-- Content -->
+        <div id="detailsContent" style="padding:16px 20px; width:100%; box-sizing:border-box; overflow:hidden;"></div>
+
+    </div>
+</div>
+		
+		
 	</main>
 
 	<script src="folders.js"></script>
